src/sphinxdocrs/tests/snapshots/parity__apidoc_parity_python_tree.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: py_tree
---
- modules.rst
- mypkg.rst
- mypkg.sub.rst
