src/sphinxdocrs/tests/snapshots/parity__html_parity_gap_missing_in_rust.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: missing_in_rust
---
- _static/alabaster.css
- _static/base-stemmer.js
- _static/basic.css
- _static/custom.css
- _static/doctools.js
- _static/documentation_options.js
- _static/english-stemmer.js
- _static/file.png
- _static/github-banner.svg
- _static/language_data.js
- _static/minus.png
- _static/plus.png
- _static/pygments.css
- _static/searchtools.js
- _static/sphinx_highlight.js
