src/sphinxdocrs/tests/snapshots/parity__html_parity_rust_static_files.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: files
---
- alabaster.css
- base-stemmer.js
- basic.css
- custom.css
- doctools.js
- documentation_options.js
- english-stemmer.js
- file.png
- github-banner.svg
- language_data.js
- minus.png
- myextra.css
- plus.png
- pygments.css
- searchtools.js
- sphinx_highlight.js
- sphinxdocrs.css
