src/sphinxdocrs/tests/snapshots/parity__html_parity_rust_top_level_files.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: rs_files
---
- ".buildinfo"
- _sources
- _static
- genindex.html
- guide.html
- index.html
- objects.inv
- search.html
- searchindex.js
