src/sphinxdocrs/tests/snapshots/parity__json_parity_python_globalcontext_keys.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: keys
---
- builder
- copyright
- css_files
- docstitle
- docutils_version_info
- embedded
- favicon_url
- file_suffix
- has_source
- html5_doctype
- language
- last_updated
- link_suffix
- logo_alt
- logo_url
- master_doc
- parents
- project
- release
- rellinks
- root_doc
- script_files
- shorttitle
- show_copyright
- show_search_summary
- show_source
- show_sphinx
- sourcelink_suffix
- sphinx_version
- sphinx_version_tuple
- styles
- theme_admonition_bg
- theme_admonition_border
- theme_admonition_xref_bg
- theme_admonition_xref_border
- theme_analytics_id
- theme_anchor
- theme_anchor_hover_bg
- theme_anchor_hover_fg
- theme_attention_bg
- theme_attention_border
- theme_badge_branch
- theme_base_bg
- theme_base_text
- theme_body_bg
- theme_body_max_width
- theme_body_min_width
- theme_body_text
- theme_body_text_align
- theme_canonical_url
- theme_caption_font_family
- theme_caption_font_size
- theme_caution_bg
- theme_caution_border
- theme_code_bg
- theme_code_font_family
- theme_code_font_size
- theme_code_highlight
- theme_code_highlight_bg
- theme_code_hover
- theme_code_text
- theme_codecov_button
- theme_danger_bg
- theme_danger_border
- theme_danger_shadow
- theme_description
- theme_description_font_style
- theme_donate_url
- theme_enable_search_shortcuts
- theme_error_bg
- theme_error_border
- theme_error_shadow
- theme_extra_nav_links
- theme_fixed_sidebar
- theme_font_family
- theme_font_size
- theme_footer_text
- theme_footnote_bg
- theme_footnote_border
- theme_github_banner
- theme_github_button
- theme_github_count
- theme_github_repo
- theme_github_type
- theme_github_user
- theme_gittip_user
- theme_globaltoc_collapse
- theme_globaltoc_includehidden
- theme_globaltoc_maxdepth
- theme_gratipay_user
- theme_gray_1
- theme_gray_2
- theme_gray_3
- theme_head_font_family
- theme_highlight_bg
- theme_hint_bg
- theme_hint_border
- theme_hr_border
- theme_important_bg
- theme_important_border
- theme_link
- theme_link_hover
- theme_logo
- theme_logo_name
- theme_logo_text_align
- theme_narrow_sidebar_bg
- theme_narrow_sidebar_fg
- theme_narrow_sidebar_link
- theme_navigation_with_keys
- theme_nosidebar
- theme_note_bg
- theme_note_border
- theme_opencollective
- theme_opencollective_button_color
- theme_page_width
- theme_pink_1
- theme_pink_2
- theme_pink_3
- theme_pre_bg
- theme_relbar_border
- theme_seealso_bg
- theme_seealso_border
- theme_shadow
- theme_show_powered_by
- theme_show_related
- theme_show_relbar_bottom
- theme_show_relbar_top
- theme_show_relbars
- theme_sidebar_collapse
- theme_sidebar_header
- theme_sidebar_hr
- theme_sidebar_includehidden
- theme_sidebar_link
- theme_sidebar_link_underscore
- theme_sidebar_list
- theme_sidebar_search_button
- theme_sidebar_text
- theme_sidebar_width
- theme_sidebarwidth
- theme_table_border
- theme_tidelift_url
- theme_tip_bg
- theme_tip_border
- theme_topic_bg
- theme_touch_icon
- theme_travis_button
- theme_viewcode_target_bg
- theme_warn_bg
- theme_warn_border
- theme_xref_bg
- theme_xref_border
- use_opensearch
- version
