src/sphinxdocrs/tests/snapshots/parity__log_apidoc_py_dry_run_output.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: sorted_lines(&py_combined)
---
- "/usr/sbin/python3: Error while finding module specification for 'sphinx.ext.apidoc' (ModuleNotFoundError: No module named 'sphinx')"
