src/sphinxdocrs/tests/snapshots/parity__log_html_build_py_stderr_normalised.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: "normalise_output(&html_parity_shared.py_stderr, paths)"
---
- "<PATH>/guide.rst: WARNING: document isn't included in any toctree [toc.not_included]"
- "<PATH>/index.rst:7: WARNING: Explicit markup ends without a blank line; unexpected unindent. [docutils]"
