src/sphinxdocrs/tests/snapshots/parity__log_html_build_rs_stderr_normalised.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: "normalise_output(&html_parity_shared.rs_stderr, paths)"
---
- "<PATH>/guide.rst: WARNING: document isn't included in any toctree [toc.not_included]"
- "Build succeeded: <N> file(s) written."
