src/sphinxdocrs/tests/snapshots/parity__log_quickstart_py_structural.snap
---
source: src/sphinxdocrs/tests/parity.rs
expression: py_structural
---
- "Finished: An initial directory structure has been created."
- "source files. Use the sphinx-build command to build the docs, like so:"
- sphinx-build -b builder <OUTDIR> <OUTDIR>/_build
